--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -11,5 +11,5 @@ find_package(Qt5 COMPONENTS Core Quick Widgets REQUIRED)
 set(CMAKE_RUNTIME_OUTPUT_DIRECTORY_DEBUG ${PROJECT_SOURCE_DIR}/bin/debug)
 set(CMAKE_RUNTIME_OUTPUT_DIRECTORY_RELEASE ${PROJECT_SOURCE_DIR}/bin/release)
 
-# add_subdirectory(./src-toou2d)
+add_subdirectory(./src-toou2d)
 add_subdirectory(./example)
