--- a/example/CMakeLists.txt
+++ b/example/CMakeLists.txt
@@ -6,6 +6,6 @@ aux_source_directory(. SRC)
 
 add_executable(${PROJECT_NAME} ${SRC} ./qml.qrc)
 
-set_target_properties(${PROJECT_NAME} PROPERTIES LINK_FLAGS_DEBUG "/subsystem:windows /entry:mainCRTStartup")
-                    
+set_target_properties(${PROJECT_NAME} PROPERTIES LINK_FLAGS "/subsystem:windows /entry:mainCRTStartup")
+
 target_link_libraries(${PROJECT_NAME} Qt5::Core Qt5::Quick Qt5::Widgets)
